--- a/notebooks/in_vehicle_coupon_recommendation_v3dot1_ensemble_random_forest_gradient_boosting.ipynb
+++ b/notebooks/in_vehicle_coupon_recommendation_v3dot1_ensemble_random_forest_gradient_boosting.ipynb
@@ -22523,503 +22523,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "id": "48fb24b0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[115, 94], [116, 95], [117, 96], [118, 97], [132, 111]]"
-      ]
-     },
-     "execution_count": 93,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "time: 1.27 ms (started: 2022-11-21 21:54:53 -08:00)\n"
-     ]
-    }
-   ],
-   "source": [
-    "row_index_column_index_list"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "4195c8a5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "id": "af69e1dd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>random_forest_decision_threshold</th>\n",
-       "      <th>random_forest_precision</th>\n",
-       "      <th>random_forest_recall</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>8197</th>\n",
-       "      <td>0.795157</td>\n",
-       "      <td>0.898359</td>\n",
-       "      <td>0.294567</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8198</th>\n",
-       "      <td>0.795280</td>\n",
-       "      <td>0.898305</td>\n",
-       "      <td>0.294393</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8205</th>\n",
-       "      <td>0.795617</td>\n",
-       "      <td>0.898458</td>\n",
-       "      <td>0.293352</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8206</th>\n",
-       "      <td>0.795655</td>\n",
-       "      <td>0.898404</td>\n",
-       "      <td>0.293178</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8207</th>\n",
-       "      <td>0.795659</td>\n",
-       "      <td>0.898350</td>\n",
-       "      <td>0.293005</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10072</th>\n",
-       "      <td>0.979371</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.000694</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10073</th>\n",
-       "      <td>0.981250</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.000521</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10074</th>\n",
-       "      <td>0.981542</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.000347</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10075</th>\n",
-       "      <td>0.982002</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.000174</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10076</th>\n",
-       "      <td>0.982663</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1869 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       random_forest_decision_threshold  random_forest_precision  \\\n",
-       "8197                           0.795157                 0.898359   \n",
-       "8198                           0.795280                 0.898305   \n",
-       "8205                           0.795617                 0.898458   \n",
-       "8206                           0.795655                 0.898404   \n",
-       "8207                           0.795659                 0.898350   \n",
-       "...                                 ...                      ...   \n",
-       "10072                          0.979371                 1.000000   \n",
-       "10073                          0.981250                 1.000000   \n",
-       "10074                          0.981542                 1.000000   \n",
-       "10075                          0.982002                 1.000000   \n",
-       "10076                          0.982663                 1.000000   \n",
-       "\n",
-       "       random_forest_recall  \n",
-       "8197               0.294567  \n",
-       "8198               0.294393  \n",
-       "8205               0.293352  \n",
-       "8206               0.293178  \n",
-       "8207               0.293005  \n",
-       "...                     ...  \n",
-       "10072              0.000694  \n",
-       "10073              0.000521  \n",
-       "10074              0.000347  \n",
-       "10075              0.000174  \n",
-       "10076              0.000000  \n",
-       "\n",
-       "[1869 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "time: 5.22 ms (started: 2022-11-21 21:54:53 -08:00)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# df_random_forest_decision_threshold_precision_recall\\\n",
-    "# .loc[df_random_forest_decision_threshold_precision_recall.loc[:,'random_forest_precision'] >= 0.898305, 'random_forest_decision_threshold']\n",
-    "\n",
-    "df_random_forest_decision_threshold_precision_recall\\\n",
-    ".loc[df_random_forest_decision_threshold_precision_recall.loc[:,'random_forest_precision'] >= 0.898305, :]\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "id": "228cbbb1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>gradient_boosting_decision_threshold</th>\n",
-       "      <th>gradient_boosting_precision</th>\n",
-       "      <th>gradient_boosting_recall</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.568595</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.000002</td>\n",
-       "      <td>0.568552</td>\n",
-       "      <td>0.999826</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.000002</td>\n",
-       "      <td>0.568608</td>\n",
-       "      <td>0.999826</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.000002</td>\n",
-       "      <td>0.568664</td>\n",
-       "      <td>0.999826</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.000002</td>\n",
-       "      <td>0.568720</td>\n",
-       "      <td>0.999826</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8415</th>\n",
-       "      <td>0.998773</td>\n",
-       "      <td>0.898246</td>\n",
-       "      <td>0.266620</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8416</th>\n",
-       "      <td>0.998774</td>\n",
-       "      <td>0.898186</td>\n",
-       "      <td>0.266447</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8417</th>\n",
-       "      <td>0.998780</td>\n",
-       "      <td>0.898126</td>\n",
-       "      <td>0.266273</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8444</th>\n",
-       "      <td>0.998849</td>\n",
-       "      <td>0.898275</td>\n",
-       "      <td>0.262107</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8445</th>\n",
-       "      <td>0.998850</td>\n",
-       "      <td>0.898214</td>\n",
-       "      <td>0.261934</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>8180 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      gradient_boosting_decision_threshold  gradient_boosting_precision  \\\n",
-       "0                                 0.000000                     0.568595   \n",
-       "1                                 0.000002                     0.568552   \n",
-       "2                                 0.000002                     0.568608   \n",
-       "3                                 0.000002                     0.568664   \n",
-       "4                                 0.000002                     0.568720   \n",
-       "...                                    ...                          ...   \n",
-       "8415                              0.998773                     0.898246   \n",
-       "8416                              0.998774                     0.898186   \n",
-       "8417                              0.998780                     0.898126   \n",
-       "8444                              0.998849                     0.898275   \n",
-       "8445                              0.998850                     0.898214   \n",
-       "\n",
-       "      gradient_boosting_recall  \n",
-       "0                     1.000000  \n",
-       "1                     0.999826  \n",
-       "2                     0.999826  \n",
-       "3                     0.999826  \n",
-       "4                     0.999826  \n",
-       "...                        ...  \n",
-       "8415                  0.266620  \n",
-       "8416                  0.266447  \n",
-       "8417                  0.266273  \n",
-       "8444                  0.262107  \n",
-       "8445                  0.261934  \n",
-       "\n",
-       "[8180 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 95,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "time: 5.42 ms (started: 2022-11-21 21:54:53 -08:00)\n"
-     ]
-    }
-   ],
-   "source": [
-    "df_gradient_boosting_decision_threshold_precision_recall\\\n",
-    ".loc[df_gradient_boosting_decision_threshold_precision_recall.loc[:,'gradient_boosting_precision'] <= 0.898308, :]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
-   "id": "b666e498",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>gradient_boosting_decision_threshold</th>\n",
-       "      <th>gradient_boosting_precision</th>\n",
-       "      <th>gradient_boosting_recall</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.568595</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.000002</td>\n",
-       "      <td>0.568552</td>\n",
-       "      <td>0.999826</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.000002</td>\n",
-       "      <td>0.568608</td>\n",
-       "      <td>0.999826</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.000002</td>\n",
-       "      <td>0.568664</td>\n",
-       "      <td>0.999826</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.000002</td>\n",
-       "      <td>0.568720</td>\n",
-       "      <td>0.999826</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8233</th>\n",
-       "      <td>0.998381</td>\n",
-       "      <td>0.898520</td>\n",
-       "      <td>0.295088</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8234</th>\n",
-       "      <td>0.998382</td>\n",
-       "      <td>0.898466</td>\n",
-       "      <td>0.294914</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8235</th>\n",
-       "      <td>0.998384</td>\n",
-       "      <td>0.898413</td>\n",
-       "      <td>0.294740</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8236</th>\n",
-       "      <td>0.998388</td>\n",
-       "      <td>0.898359</td>\n",
-       "      <td>0.294567</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8237</th>\n",
-       "      <td>0.998391</td>\n",
-       "      <td>0.898305</td>\n",
-       "      <td>0.294393</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>8238 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      gradient_boosting_decision_threshold  gradient_boosting_precision  \\\n",
-       "0                                 0.000000                     0.568595   \n",
-       "1                                 0.000002                     0.568552   \n",
-       "2                                 0.000002                     0.568608   \n",
-       "3                                 0.000002                     0.568664   \n",
-       "4                                 0.000002                     0.568720   \n",
-       "...                                    ...                          ...   \n",
-       "8233                              0.998381                     0.898520   \n",
-       "8234                              0.998382                     0.898466   \n",
-       "8235                              0.998384                     0.898413   \n",
-       "8236                              0.998388                     0.898359   \n",
-       "8237                              0.998391                     0.898305   \n",
-       "\n",
-       "      gradient_boosting_recall  \n",
-       "0                     1.000000  \n",
-       "1                     0.999826  \n",
-       "2                     0.999826  \n",
-       "3                     0.999826  \n",
-       "4                     0.999826  \n",
-       "...                        ...  \n",
-       "8233                  0.295088  \n",
-       "8234                  0.294914  \n",
-       "8235                  0.294740  \n",
-       "8236                  0.294567  \n",
-       "8237                  0.294393  \n",
-       "\n",
-       "[8238 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 96,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "time: 5.71 ms (started: 2022-11-21 21:54:53 -08:00)\n"
-     ]
-    }
-   ],
-   "source": [
-    "df_gradient_boosting_decision_threshold_precision_recall\\\n",
-    ".loc[df_gradient_boosting_decision_threshold_precision_recall.loc[:,'gradient_boosting_recall'] >= 0.294393, :]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9f5fae73",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -23047,7 +22552,7 @@
     }
    ],
    "source": [
-    "def piecewise_model_random_forest_classifier_gradient_boosting_classifier_train_predictions(minimum_conversion_rate=None,\n",
+    "def piecewise_model_random_forest_classifier_gradient_boosting_classifier_predictions_train(minimum_conversion_rate=None,\n",
     "                                                                                            minimum_total_customer_intent_acquisitions=None,\n",
     "                                                                                            minimum_percentage_of_total_customer_intent_acquisitions=None,\n",
     "                                                                                            random_forest_classifier=None, \n",
@@ -23083,7 +22588,7 @@
     }
    ],
    "source": [
-    "def piecewise_model_random_forest_classifier_gradient_boosting_classifier_test_predictions(minimum_conversion_rate=None,\n",
+    "def piecewise_model_random_forest_classifier_gradient_boosting_classifier_predictions_test(minimum_conversion_rate=None,\n",
     "                                                                                           minimum_total_customer_intent_acquisitions=None,\n",
     "                                                                                           minimum_percentage_of_total_customer_intent_acquisitions=None,\n",
     "                                                                                           random_forest_classifier=None, \n",
@@ -23107,11 +22612,12 @@
    ],
    "source": [
     "y_test_predicted = \\\n",
-    "piecewise_model_random_forest_classifier_gradient_boosting_classifier_test_predictions(minimum_conversion_rate=None,\n",
+    "piecewise_model_random_forest_classifier_gradient_boosting_classifier_predictions_test(minimum_conversion_rate=None,\n",
     "                                                                                       minimum_total_customer_intent_acquisitions=None,\n",
     "                                                                                       minimum_percentage_of_total_customer_intent_acquisitions=None,\n",
     "                                                                                       random_forest_classifier=None, \n",
-    "                                                                                       gradient_boosting_classifier=None)"
+    "                                                                                       gradient_boosting_classifier=None)\n",
+    "y_test_predicted"
    ]
   },
   {
